// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > matches snapshot 1 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR fDwQGm aje-popover is-auto aje-popover-bottom-left"
  >
    Child
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > matches snapshot 1 2`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR fDwQGm aje-popover is-auto aje-popover-bottom-left is-visible"
  >
    Child
  </div>
</DocumentFragment>
`;
